# ASL_research

./: .gitignore  CITATION.cff  LICENSE  README.md  TODO.md  flake.nix  justfile  package-lock.json  pyproject.toml  requirements.txt  web-backend.py
.github/workflows/: ci.yml
data/signs/: labels.txt
glosstoenglish/: dataprocess.py  main.py  model.py
ml/: demo.py
ml/api/: asl_to_english.py  english_to_gloss.py
ml/data_collection/: sign_data_collection.py
ml/dataloaders/: sign_dataloader.py  video_dataloader.py  wlasl_dataloader.py
ml/dataset_loaders/: sign.py
ml/datasets/: alsg.py
ml/gloss_to_english/: inference.py  model.py  train.py
ml/preprocess/: wlasl_preprocess.py
ml/tools/: utils.py
ml/utils/: landmarks.py  transformer.py
model/: dataprocess.py  glosstoenglish.py  main.py  positionalencoding.py  train.py
models/: utils.py
models/data_loaders/: alsg_data_loader.py  sign_data_loader.py
models/datasetloaders/: signdatasetloader.py
models/datasets/: wlasl.py
models/gloss_to_english/: inference.py  train.py
models/glosstoenglish/: dataprocess.py  datasetloader.py  main.py  model.py  positionalencoding.py  train.py
models/preprocess/: sign_data_collection.py
models/sign_to_gloss/: train.py
models/signtogloss/: datacollection.py  dataprocess.py  datasetloader.py  detection.py  model.py  preprocess.py  (+2 more)
nix/: devShell.nix  holistic-null-ptr.patch  lib.nix  mediapipe.nix
signtogloss/: detection.py
utils/: utils.py
web-frontend/: .gitignore  .prettierrc.yml  astro.config.mjs  eslint.config.js  package-lock.json  package.json
(+72 files in other folders)
