[project]
name = "asl-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "flask>=3.1.0",
    "imageio[pyav]>=2.37.0",
    "matplotlib>=3.10.0",
    "mediapipe>=0.10.21",
    "msgpack>=1.1.0",
    "numpy>=1.26.4",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.1",
    "spacy>=3.8.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[project.scripts]
dev = "web_backend:run_server"
